force-app/main/default/objects/MUSW__Flow_Action_Setting__mdt/MUSW__Flow_Action_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Flow Action Setting</label>
    <pluralLabel>Flow Action Settings</pluralLabel>
</CustomObject>