force-app/main/default/objects/MUSW__Flow_Action_Setting__mdt/fields/MUSW__Flow_Action_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Flow_Action_Button_Label__c</fullName>
    <label>Flow Action Button Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>