force-app/main/default/objects/MUSW__Flow_Action_Setting__mdt/fields/MUSW__Flow_Input_Variable_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Flow_Input_Variable_API_Name__c</fullName>
    <inlineHelpText>Specify the API name of the input variable for the corresponding flow. Used to determine where to pass the record IDs when starting the flow.</inlineHelpText>
    <label>Flow Input Variable API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>