force-app/main/default/objects/MUSW__Flow_Action_Setting__mdt/fields/MUSW__Flow_Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Flow_Namespace_Prefix__c</fullName>
    <label>Flow Namespace Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>