force-app/main/default/objects/MUSW__Flow_Action_Setting__mdt/fields/MUSW__List_View_Board_Setting__c.field-meta.xml
<CustomField>
    <fullName>MUSW__List_View_Board_Setting__c</fullName>
    <label>List View Board Setting</label>
    <referenceTo>MUSW__List_View_Board_Setting__mdt</referenceTo>
    <relationshipLabel>Flow Action Settings</relationshipLabel>
    <relationshipName>Flow_Action_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>