force-app/main/default/objects/MUSW__Flow_Action_Setting__mdt/fields/MUSW__Order__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>